syntax = "proto3";

option java_package = "com.swcourse.grpc.protobuf";
option java_outer_classname="SwcoursePersons";

message SwcoursePerson {
    int32 id = 1;
    string name = 2;
    repeated PhoneNumber phone = 5;

    message PhoneNumber {
        string number = 1;
        PhoneType type = 2;

        enum PhoneType {
            MOBILE = 0;
            HOME = 1;
            WORK = 2;
        }
    }
}